feat: 応募APIの仕様とクエリを追加
